[tool.poetry]
name = "midnight-traces"
version = "0.1.0"
description = "Midnight Traces project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
google-genai = "^1.53.0"
plotly = "^6.5.0"
psycopg2-binary = "^2.9.11"
python-dotenv = "^1.2.1"
requests = "^2.32.5"
tenacity = "^9.1.2"
pillow = "^12.0.0"
kaleido = "1.2.0"
logistro = "^2.0.1"
choreographer = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-timeout = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
